# zuspec-parser

./: .buildinfo  .env  .gitignore  CMakeLists.txt  ast_structure.html  genindex.html  index.html  installing.html  ivpm.yaml  objects.inv  quickstart.html  reference_api_docs.html  search.html  searchindex.js  setup.bat  setup.py
.github/workflows/: ci.yml
_sources/: index.rst.txt  reference_api_docs.rst.txt
ast/: activity.yaml  constraint.yaml  coretypes.yaml  datatype.yaml  exec.yaml  expr.yaml  extension.yaml  field.yaml  functions.yaml  linking.yaml  struct.yaml  template_types.yaml  typescope.yaml
doc/: FindInfoByPosition.md  LinkProcess.md  NameResolution.md  RepresentingParameterizedTypes.md
doc/source/: conf.py  index.rst  installing.rst
docs/: ast_structure.rst  conf.py  index.rst  quickstart.rst
python/: .gitignore  PyBaseVisitor.h  PyParserUtils.cpp  PyParserUtils.h  core.cpp  core.pyx  pssast.h  pssast.pyx  pssast_api.h
python/pssparser/: pssast.pxd  pssast_decl.pxd
python/zsp_parser/: __init__.py  __version__.py  core.pxd  core.pyi  decl.pxd  parser.py  pkginfo.py
python/zsp_parser/utils/: symbol_children_scope_util.py  symbol_scope_util.py  symbol_type_scope_util.py
python/zuspec_parser/: core.pxd  decl.pxd  zsp_ast.pxd  zsp_ast_decl.pxd
scripts/: build_linux.sh  gen_ast.py
src/: AssocDataTypeScope.cpp  AssocDataTypeScope.h  AssocDataTypeScopeSizeof.cpp  AssocDataTypeScopeSizeof.h  AstBuilder.cpp  AstBuilder.h  AstBuilderInt.cpp  AstBuilderInt.h  AstLinker.cpp  AstLinker.h  AstMerger.cpp  AstMerger.h  AstNameResolverClient.cpp  AstNameResolverClient.h  AstNamespace.cpp  AstNamespace.h  AstSymbol.cpp  AstSymbol.h  AstSymbolTable.cpp  AstSymbolTable.h  AstSymbolTableIterator.cpp  AstSymbolTableIterator.h  AstTypeDecl.cpp  AstTypeDecl.h  AstUtil.cpp  AstUtil.h  BaseMarkerListener.cpp  BaseMarkerListener.h  BuiltinsFactory.cpp  BuiltinsFactory.h  CMakeLists.txt  Factory.cpp  Factory.h  Marker.cpp  Marker.h  MarkerCollector.cpp  MarkerCollector.h  NameResolver.cpp  NameResolver.h  PMacroProcLexer.cpp  (+81 more)
src/.antlr/: PSSLexer.interp  PSSLexer.java  PSSLexer.tokens  PSSParser.interp  PSSParser.java  PSSParser.tokens
src/include/zsp/: IAstBuilder.h  IFactory.h  ILinker.h  IMarker.h  IMarkerCollector.h  IMarkerListener.h  INameResolver.h  INameResolverClient.h  INamespace.h  ISymbol.h  ISymbolRef.h  ISymbolResolver.h  ISymbolScope.h  ISymbolTable.h  ISymbolTableIterator.h  ITypeDecl.h  SymbolKindE.h
src/include/zsp/impl/: ISymbol.h  NameResolverClientBase.h
src/include/zsp/parser/: FactoryExt.h  IAstBuilder.h  IBuiltinTypes.h  IFactory.h  ILinker.h  ILookupLocationResult.h  IMarker.h  IMarkerCollector.h  IMarkerListener.h  INameResolver.h  INameResolverClient.h  INamespace.h  ISymbol.h  ISymbolRef.h  ISymbolResolver.h  ISymbolScope.h  ISymbolTable.h  ISymbolTableIterator.h  ITaskFindElementByLocation.h  ITypeDecl.h  IVal.h  IValArray.h  IValFactory.h  IValInt.h  IValStr.h  IValStruct.h  IValVisitor.h  SymbolKindE.h
src/include/zsp/parser/impl/: ISymbol.h  Loader.h  NameResolverClientBase.h  ScopeUtil.h  TaskClearLinks.h  TaskCloneSymbolScope.h  TaskComputeTypePackedSize.h  TaskCopyAst.h  TaskEvalExpr.h  TaskGetAstRoot.h  TaskGetElemSymbolScope.h  TaskGetFieldType.h  TaskGetName.h  TaskGetSubscriptSymbolScope.h  TaskGetSymbolRefPath.h  TaskGetSymbolRefPathKind.h  TaskGetTemplateParamDeclDefault.h  TaskIndexField.h  TaskIsPyRef.h  TaskIsUnspecializedGenericType.h  TaskResolveExprRef.h  TaskResolveSymbolPathRef.h  TaskResolveSymbolPathRefResult.h  TaskResolveTypeRef.h  ValVisitorBase.h
src/stdlib/: addr_reg_pkg.pss  executor_pkg.pss  packed_s.pss  std_pkg.pss  sync_pkg.pss
tests/: CMakeLists.txt
tests/python/: test_link_error.py  test_load.py  test_lookup.py  test_parser.py
tests/src/: TestActionTraversalParams.cpp  TestActionTraversalParams.h  TestAggregateLiterals.cpp  TestAggregateLiterals.h  TestAnnotations.cpp  TestAnnotations.h  TestArrays.cpp  TestArrays.h  TestBase.cpp  TestBase.h  TestConstraints.cpp  TestConstraints.h  TestDocString.cpp  TestDocString.h  TestFunctionDecl.cpp  TestFunctionDecl.h  TestFunctionParamList.cpp  TestFunctionParamList.h  TestImportLink.cpp  TestImportLink.h  TestInheritance.cpp  TestInheritance.h  TestLinkEnum.cpp  TestLinkEnum.h  TestLinkErrors.cpp  TestLinkErrors.h  TestLinkOverlay.cpp  TestLinkOverlay.h  TestParseExamples.cpp  TestParseExamples.h  TestParseLinkActions.cpp  TestParseLinkActions.h  TestParseSpecExamples.cpp  TestParseSpecExamples.h  TestPerformance.cpp  TestPerformance.h  TestProceduralMacros.cpp  TestProceduralMacros.h  TestProceduralStmts.cpp  TestProceduralStmts.h  (+10 more)
